// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preact build should build generated projects without errors. Veryfing default 1`] = `
Object {
  "assets": Object {
    "favicon.ico": Object {
      "isFile": true,
      "size": 15086,
    },
    "icons": Object {
      "android-chrome-192x192.png": Object {
        "isFile": true,
        "size": 14058,
      },
      "android-chrome-512x512.png": Object {
        "isFile": true,
        "size": 51484,
      },
      "apple-touch-icon.png": Object {
        "isFile": true,
        "size": 12746,
      },
      "favicon-16x16.png": Object {
        "isFile": true,
        "size": 626,
      },
      "favicon-32x32.png": Object {
        "isFile": true,
        "size": 1487,
      },
      "isDirectory": true,
      "mstile-150x150.png": Object {
        "isFile": true,
        "size": 9050,
      },
    },
    "isDirectory": true,
  },
  "bundle.js": Object {
    "isFile": true,
    "size": 19659,
  },
  "favicon.ico": Object {
    "isFile": true,
    "size": 15086,
  },
  "index.html": Object {
    "isFile": true,
    "size": 775,
  },
  "manifest.json": Object {
    "isFile": true,
    "size": 426,
  },
  "polyfills.chunk.bafcb.js": Object {
    "isFile": true,
    "size": 4068,
  },
  "push-manifest.json": Object {
    "isFile": true,
    "size": 303,
  },
  "route-home.chunk.25be6.js": Object {
    "isFile": true,
    "size": 959,
  },
  "route-profile.chunk.498ba.js": Object {
    "isFile": true,
    "size": 1597,
  },
  "style.css": Object {
    "isFile": true,
    "size": 1065,
  },
  "style.css.map": Object {
    "isFile": true,
    "size": 2345,
  },
  "sw.js": Object {
    "isFile": true,
    "size": 3905,
  },
}
`;

exports[`preact build should build generated projects without errors. Veryfing empty 1`] = `
Object {
  "assets": Object {
    "favicon.ico": Object {
      "isFile": true,
      "size": 15086,
    },
    "icon.png": Object {
      "isFile": true,
      "size": 51484,
    },
    "isDirectory": true,
  },
  "bundle.js": Object {
    "isFile": true,
    "size": 10694,
  },
  "favicon.ico": Object {
    "isFile": true,
    "size": 15086,
  },
  "index.html": Object {
    "isFile": true,
    "size": 534,
  },
  "manifest.json": Object {
    "isFile": true,
    "size": 298,
  },
  "polyfills.chunk.bbde4.js": Object {
    "isFile": true,
    "size": 4068,
  },
  "push-manifest.json": Object {
    "isFile": true,
    "size": 2,
  },
  "style.css": Object {
    "isFile": true,
    "size": 131,
  },
  "style.css.map": Object {
    "isFile": true,
    "size": 359,
  },
  "sw.js": Object {
    "isFile": true,
    "size": 3378,
  },
}
`;

exports[`preact build should build generated projects without errors. Veryfing root 1`] = `
Object {
  "assets": Object {
    "favicon.ico": Object {
      "isFile": true,
      "size": 15086,
    },
    "icons": Object {
      "android-chrome-192x192.png": Object {
        "isFile": true,
        "size": 14058,
      },
      "android-chrome-512x512.png": Object {
        "isFile": true,
        "size": 51484,
      },
      "apple-touch-icon.png": Object {
        "isFile": true,
        "size": 12746,
      },
      "favicon-16x16.png": Object {
        "isFile": true,
        "size": 626,
      },
      "favicon-32x32.png": Object {
        "isFile": true,
        "size": 1487,
      },
      "isDirectory": true,
      "mstile-150x150.png": Object {
        "isFile": true,
        "size": 9050,
      },
    },
    "isDirectory": true,
  },
  "bundle.js": Object {
    "isFile": true,
    "size": 18741,
  },
  "favicon.ico": Object {
    "isFile": true,
    "size": 15086,
  },
  "index.html": Object {
    "isFile": true,
    "size": 775,
  },
  "manifest.json": Object {
    "isFile": true,
    "size": 426,
  },
  "polyfills.chunk.bbde4.js": Object {
    "isFile": true,
    "size": 4068,
  },
  "push-manifest.json": Object {
    "isFile": true,
    "size": 303,
  },
  "route-home.chunk.347f4.js": Object {
    "isFile": true,
    "size": 959,
  },
  "route-profile.chunk.bb3a3.js": Object {
    "isFile": true,
    "size": 1595,
  },
  "style.css": Object {
    "isFile": true,
    "size": 1065,
  },
  "style.css.map": Object {
    "isFile": true,
    "size": 2246,
  },
  "sw.js": Object {
    "isFile": true,
    "size": 3905,
  },
}
`;

exports[`preact build should build generated projects without errors. Veryfing simple 1`] = `
Object {
  "assets": Object {
    "favicon.ico": Object {
      "isFile": true,
      "size": 15086,
    },
    "icon.png": Object {
      "isFile": true,
      "size": 51484,
    },
    "isDirectory": true,
  },
  "bundle.js": Object {
    "isFile": true,
    "size": 11336,
  },
  "favicon.ico": Object {
    "isFile": true,
    "size": 15086,
  },
  "index.html": Object {
    "isFile": true,
    "size": 548,
  },
  "manifest.json": Object {
    "isFile": true,
    "size": 290,
  },
  "polyfills.chunk.bbde4.js": Object {
    "isFile": true,
    "size": 4068,
  },
  "push-manifest.json": Object {
    "isFile": true,
    "size": 2,
  },
  "style.css": Object {
    "isFile": true,
    "size": 296,
  },
  "style.css.map": Object {
    "isFile": true,
    "size": 621,
  },
  "sw.js": Object {
    "isFile": true,
    "size": 3378,
  },
}
`;
